# kompressor

./: .gitignore  README.md  pyproject.toml
condenser/: __main__.py  cli.py  condenser.py
src/condenser/: __init__.py  cli.py  condenser.py
src/kompressor/: cli.py  kompressor.py
tests/: generate_image.py  test_condenser.py
