[project]
name = "kompressor"
version = "0.2.2"
description = "Compress and resize images"
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
kompressor = "kompressor:kompressor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pillow>=11.0.0",
    "pudb>=2024.1.3",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]
